--- a/Klinik.Web/packages.config
+++ b/Klinik.Web/packages.config
@@ -8,6 +8,7 @@
   <package id="FontAwesome" version="4.7.0" targetFramework="net461" />
   <package id="jQuery" version="3.0.0" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net461" />
+  <package id="jQuery.UI" version="1.12.1.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="LinqKit" version="1.1.15" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
