--- a/Klinik.Web/Web.config
+++ b/Klinik.Web/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Klinik.Web-20181107085356.mdf;Initial Catalog=aspnet-Klinik.Web-20181107085356;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="KlinikDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\MSSQLSERVER2014;initial catalog=KlinikDB;user id=sa;password=P@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="KlinikDBEntities" connectionString="metadata=res://*/DataAccess.DataRepository.Model1.csdl|res://*/DataAccess.DataRepository.Model1.ssdl|res://*/DataAccess.DataRepository.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\MSSQLSERVER2014;initial catalog=KlinikDB;user id=sa;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
