--- a/Klinik.Data/App.config
+++ b/Klinik.Data/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-      <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.Model1.csdl|res://*/DataRepository.Model1.ssdl|res://*/DataRepository.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQL2016;initial catalog=KlinikDB;user id=adminDB;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.Model1.csdl|res://*/DataRepository.Model1.ssdl|res://*/DataRepository.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-8A3OLU4E;initial catalog=KlinikDB;user id=sa;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
