--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Account\AccountModel.cs" />
     <Compile Include="Account\PasswordHistoryModel.cs" />
+    <Compile Include="Account\ResetPasswordModel.cs" />
     <Compile Include="BaseGetRequest.cs" />
     <Compile Include="BaseModel.cs" />
     <Compile Include="BaseResponse.cs" />
