Moved SMTP configuration into web config

--- a/Klinik.Web/Web.config
+++ b/Klinik.Web/Web.config
@@ -13,6 +13,12 @@
     <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.Model1.csdl|res://*/DataRepository.Model1.ssdl|res://*/DataRepository.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\MSSQLSERVER2014;initial catalog=KlinikDB;user id=sa;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
+    <add key="SmtpSender" value="verifikasi.klinik@gmail.com" />
+    <add key="SmtpSenderDisplay" value="Medical Management System" />
+    <add key="SmtpSenderPassword" value="Klinik2019" />
+    <add key="SmtpHost" value="smtp.gmail.com" />
+    <add key="SmtpPort" value="587" />
+
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
