Replaced octopus logo

--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -456,6 +456,7 @@
     <Content Include="Content\images\inpex-logo.png" />
     <Content Include="Content\images\inpex-logo1.png" />
     <Content Include="Content\images\logo-depag.jpg" />
+    <Content Include="Content\images\logo-medica.png" />
     <Content Include="Content\images\logo.png" />
     <Content Include="Content\images\logo1.png" />
     <Content Include="Content\images\sidebar.jpg" />
