--- a/Klinik.Entities/Klinik.Entities.csproj
+++ b/Klinik.Entities/Klinik.Entities.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Account\AccountModel.cs" />
     <Compile Include="Account\PasswordHistoryModel.cs" />
     <Compile Include="Account\ResetPasswordModel.cs" />
+    <Compile Include="Administration\LogModel.cs" />
     <Compile Include="BaseGetRequest.cs" />
     <Compile Include="BaseModel.cs" />
     <Compile Include="BaseResponse.cs" />
