--- a/Klinik.Web/Web.config
+++ b/Klinik.Web/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Klinik.Web-20181107085356.mdf;Initial Catalog=aspnet-Klinik.Web-20181107085356;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.Model1.csdl|res://*/DataRepository.Model1.ssdl|res://*/DataRepository.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\MSSQLSERVER2014;initial catalog=KlinikDB;user id=sa;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="KlinikDBEntities" connectionString="metadata=res://*/DataRepository.Model1.csdl|res://*/DataRepository.Model1.ssdl|res://*/DataRepository.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=KlinikDB;user id=sa;password=P@ssw0rd;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="SmtpSender" value="verifikasi.klinik@gmail.com" />
@@ -63,7 +63,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
