--- a/Klinik.Features/Klinik.Features.csproj
+++ b/Klinik.Features/Klinik.Features.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoMapper, Version=8.0.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
@@ -86,6 +88,7 @@
     <Compile Include="MasterData\Clinic\ClinicRequest.cs" />
     <Compile Include="MasterData\Clinic\ClinicResponse.cs" />
     <Compile Include="MasterData\Clinic\ClinicValidator.cs" />
+    <Compile Include="MasterData\EmployeeStatus\EmployeeStatusHandler.cs" />
     <Compile Include="MasterData\Employee\EmployeeHandler.cs" />
     <Compile Include="MasterData\Employee\EmployeeRequest.cs" />
     <Compile Include="MasterData\Employee\EmployeeResponse.cs" />
@@ -129,7 +132,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="MasterData\FamilyRelationship\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
