--- a/Klinik.Common/Klinik.Common.csproj
+++ b/Klinik.Common/Klinik.Common.csproj
@@ -85,6 +85,8 @@
     <Compile Include="Constants.cs" />
     <Compile Include="CustomAuthorizeAttribute.cs" />
     <Compile Include="Enumerations\ClinicEnums.cs" />
+    <Compile Include="Enumerations\RegistrationStatusEnum.cs" />
+    <Compile Include="Enumerations\RegistrationTypeEnum.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="OrganizationData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
