--- a/Klinik.Features/Klinik.Features.csproj
+++ b/Klinik.Features/Klinik.Features.csproj
@@ -112,6 +112,10 @@
     <Compile Include="MasterData\User\UserResponse.cs" />
     <Compile Include="MasterData\User\UserValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registration\RegistrationHandler.cs" />
+    <Compile Include="Registration\RegistrationRequest.cs" />
+    <Compile Include="Registration\RegistrationResponse.cs" />
+    <Compile Include="Registration\RegistrationValidator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Klinik.Common\Klinik.Common.csproj">
