--- a/Klinik.Web/Klinik.Web.csproj
+++ b/Klinik.Web/Klinik.Web.csproj
@@ -1133,6 +1133,8 @@
     <Content Include="Views\Account\ResetPassword.cshtml" />
     <Content Include="Views\Registration\CreateOrEditRegistration.cshtml" />
     <Content Include="Views\Registration\Index.cshtml" />
+    <Content Include="Views\MasterData\DoctorList.cshtml" />
+    <Content Include="Views\MasterData\CreateOrEditDoctor.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
