--- a/Klinik.Features/Klinik.Features.csproj
+++ b/Klinik.Features/Klinik.Features.csproj
@@ -93,6 +93,7 @@
     <Compile Include="MasterData\Employee\EmployeeRequest.cs" />
     <Compile Include="MasterData\Employee\EmployeeResponse.cs" />
     <Compile Include="MasterData\Employee\EmployeeValidator.cs" />
+    <Compile Include="MasterData\FamilyRelationship\FamilyStatusHandler.cs" />
     <Compile Include="MasterData\GeneralMaster\MasterHandler.cs" />
     <Compile Include="MasterData\Menu\MenuHandler.cs" />
     <Compile Include="MasterData\Organization\OrganizationHandler.cs" />
@@ -135,8 +136,6 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MasterData\FamilyRelationship\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
